# mysql-simple

./: .gitignore  .hgignore  .hgtags  .travis.yml  ChangeLog.md  README.markdown  mysql-simple.cabal  stack-lts-7.yaml  stack.yaml
.github/workflows/: tests.yml
Database/MySQL/: Simple.hs
Database/MySQL/Internal/: Blaze.hs
Database/MySQL/Simple/: Arity.hs  Compat.hs  Orphans.hs  Param.hs  Prelude.hs  QQ.hs  QueryParams.hs  QueryResults.hs  Result.hs  Types.hs
Database/MySQL/Simple/QueryParams/: Generic.hs
Database/MySQL/Simple/QueryResults/: Generic.hs
test/: Common.hs  CustomTypeSpec.hs  DateTimeSpec.hs  main.hs
