name:           mysql-simple
version:        0.2.2.3
homepage:       https://github.com/bos/mysql-simple
bug-reports:    https://github.com/bos/mysql-simple/issues
synopsis:       A mid-level MySQL client library.
description:    
    A mid-level client library for the MySQL database, intended to be
    fast and easy to use.
    .
    /Important licensing note/: This library is BSD-licensed under the
    terms of the MySQL FOSS License Exception
    <http://www.mysql.com/about/legal/licensing/foss-exception/>.
    .
    Since this library links against the GPL-licensed @mysqlclient@
    library, a non-open-source application that uses it /may/ be
    subject to the terms of the GPL.
license:        BSD3
license-file:   LICENSE
author:         Bryan O'Sullivan <bos@serpentine.com>
maintainer:     Bryan O'Sullivan <bos@serpentine.com>
copyright:      2011 MailRank, Inc.
category:       Database
build-type:     Simple
cabal-version:  >= 1.6
extra-source-files:
    README.markdown

flag developer
  description: operate in developer mode
  default: False

library
  exposed-modules:
    Database.MySQL.Simple
    Database.MySQL.Simple.Param
    Database.MySQL.Simple.QueryParams
    Database.MySQL.Simple.QueryResults
    Database.MySQL.Simple.Result
    Database.MySQL.Simple.Types

  build-depends:
    attoparsec >= 0.8.5.3,
    base < 5,
    base16-bytestring,
    blaze-builder,
    blaze-textual,
    bytestring >= 0.9,
    mysql >= 0.1.1.1,
    pcre-light,
    old-locale,
    text >= 0.11.0.2,
    time

  ghc-options: -Wall
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs
  if flag(developer)
    ghc-prof-options: -auto-all
    ghc-options: -Werror
    cpp-options: -DASSERTS

source-repository head
  type:     git
  location: http://github.com/bos/mysql-simple

source-repository head
  type:     mercurial
  location: http://bitbucket.org/bos/mysql-simple
