name:           mysql-simple
version:        0.4.8.1
homepage:       https://github.com/paul-rouse/mysql-simple
bug-reports:    https://github.com/paul-rouse/mysql-simple/issues
synopsis:       A mid-level MySQL client library.
description:    
    A mid-level client library for the MySQL database, intended to be
    fast and easy to use.
    .
    /Important licensing note/: This library is BSD-licensed under the
    terms of the MySQL FOSS License Exception
    <http://www.mysql.com/about/legal/licensing/foss-exception/>.
    .
    Since this library links against the GPL-licensed @mysqlclient@
    library, a non-open-source application that uses it /may/ be
    subject to the terms of the GPL.
license:        BSD3
license-file:   LICENSE
author:         Bryan O'Sullivan <bos@serpentine.com>
maintainer:     Paul Rouse <pyr@doynton.org>
copyright:      2011 MailRank, Inc.
category:       Database
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.markdown
    stack.yaml

flag developer
  description: operate in developer mode
  default: False
  manual: True

library
  exposed-modules:
    Database.MySQL.Simple
    Database.MySQL.Simple.Param
    Database.MySQL.Simple.QueryParams
    Database.MySQL.Simple.QueryResults
    Database.MySQL.Simple.Result
    Database.MySQL.Simple.Types
  other-modules:
    Database.MySQL.Internal.Blaze

  build-depends:
    attoparsec >= 0.10.0.0,
    base >= 4.9 && < 5,
    base16-bytestring,
    blaze-builder,
    bytestring >= 0.9,
    containers,
    mysql >= 0.1.7,
    pcre-light,
    old-locale,
    text >= 0.11.0.2,
    time >= 1.5
  if !impl(ghc >= 8.0)
    build-depends:
      semigroups >= 0.11 && < 0.19

  -- hack to support GHC 9 for blaze-textual. see Database.MySQL.Internal.Blaze
  -- for reasoning
  if !impl(ghc >= 9.0)
    build-depends:
      blaze-textual
  else
    build-depends:
      vector

  ghc-options: -Wall -fwarn-tabs
  if impl(ghc >= 7.10)
    ghc-options: -fno-warn-unused-imports
  if flag(developer)
    ghc-prof-options: -auto-all
    ghc-options: -Werror
    cpp-options: -DASSERTS
  default-language:  Haskell2010

test-suite test
    type:            exitcode-stdio-1.0
    main-is:         main.hs
    hs-source-dirs:  test
    other-modules:   Common
                     CustomTypeSpec
                     DateTimeSpec
    ghc-options:     -Wall
    default-language: Haskell2010
    build-depends:   base                    >= 4 && < 5
                   , bytestring
                   , blaze-builder
                   , hspec
                   , mysql
                   , mysql-simple
                   , text
                   , time

source-repository head
  type:     git
  location: http://github.com/paul-rouse/mysql-simple
